# inky-frame-hassio

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
include/: lwipopts.h
src/: CMakeLists.txt  config.hh  hw_config.c  main.cc
